--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "# Stochastic Gradient Descent (SGD)"
+    "# Linear Model (LM)"
    ]
   },
   {
@@ -13,16 +12,12 @@
    "metadata": {
     "id": "l-bD5Y7jW_bI"
    },
-   "source": [
-    "#### Искусственный интелект (AI) и машинное обучение (ML) системы, которые влияют на всех нас, большинство из нас пользуются ими каждый день. Они генерируют для нас ленту новостей, которые мы читаем, музыку, которую мы слушаем, помогают в принятии решение крупным компаниям и правительствам, что мы покупаем, смотрим и слушаем."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "**Машинное обучение --- использование специальных алгоритмов самостоятельного нахождения решений различных задач путём комплексного использования статисческих данных, из которых выводятся закономерности и на основе которых делаются прогнозы.**"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
